8294594: Fix cast-function-type warnings in signal handling code

Reviewed-by: mdoerr
Backport-of: b06f1b149c8f8a49d4e42c4b782a4b3a22aa79f6